<resources>
    <string name="app_name">Lecto-Escritura</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_phone">Telefono</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_passwordAgin">Repetir Contraseña</string>
    <string name="action_sign_in">Inciar Sesión</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Usuario invalido</string>
    <string name="invalid_password">La contraseña debe contener mas de 5 caracteres</string>
    <string name="login_failed">"Inicio de sesión Fallido"</string>
    <string name="title">"Lecto-Escritura"</string>
    <string name="mensaje">Power bi GitHub Dev</string>
    <string name="logo">logo</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Actividades</string>
    <string name="title_diccionario">Diccionario</string>
    <string name="title_notifications">Informacion</string>
</resources>